--- a/management/templates/base.html
+++ b/management/templates/base.html
@@ -18,7 +18,9 @@
     <link rel="stylesheet" href="{% static 'leader-no-members.css' %}">
     <link rel="stylesheet" href="{% static 'leaderless-members.css' %}">
     <link rel="stylesheet" href="{% static 'member-count-per-brgy.css' %}">
-
+    <link rel="stylesheet" href="{% static 'cluster.css' %}">
+    <!-- Add this to include Swiper.js -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="{% static 'chart.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
