--- a/management/templates/base.html
+++ b/management/templates/base.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="{% static 'member-count-per-brgy.css' %}">
     <link rel="stylesheet" href="{% static 'cluster.css' %}">
     <link rel="stylesheet" href="{% static 'leader-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'member-profile.css' %}">
     <!-- Add this to include Swiper.js -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="{% static 'chart.js' %}"></script>
