--- a/management/templates/leader_cluster.html
+++ b/management/templates/leader_cluster.html
@@ -9,44 +9,69 @@
             <span class="leader-profile-edit-detail-toggle-btn"><i class="fa fa-edit"></i></span>
         </div>
         <div class="leader-profile-edit-profile-form-container">
-            <form method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div>
-                    {{ edit_leader_profile_form.name }}
-                </div>
-                <div class="add-leader-form-field-label-container">
-                    <div class="add-leader-field-label-div">
-                        Barangay:
+            <div class="leader-profile-edit-form-header-title-container-div">
+                <span class="leader-profile-edit-form-header-title" id="leader-profile-edit-form-header-title-left">
+                    Edit Leader Details
+                </span>
+                <span class="leader-profile-hide-edit-form-btn" id="leader-profile-edit-form-header-title-right">
+                    <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                </span>
+            </div>
+            <div class="leader-profile-edit-form-container-div">
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="leader-profile-edit-form-field-and-label-container">
+                        <div class="leader-profile-edit-form-label-div">
+                            Name:
+                        </div>
+                        <div class="leader-profile-edit-field-div">
+                            {{ edit_leader_profile_form.name }}
+                        </div>
                     </div>
-                    <div class="add-leader-field-div">
-                        <select class="add-leader-field" id="leader-edit-brgys" name="leader-brgy">
-                            <option>---------</option>
-                            {% for brgy in barangays %}
-                                <option value="{{ brgy.brgy_name }}">{{ brgy.brgy_name }}</option>
-                            {% endfor %}
-                        </select>
+                    <div class="leader-profile-edit-form-field-and-label-container">
+                        <div class="leader-profile-edit-form-label-div">
+                            Barangay:
+                        </div>
+                        <div class="leader-profile-edit-field-div">
+                            {{ edit_leader_profile_form.brgy }}
+                        </div>
                     </div>
-                </div>
-                <div class="leader-profile-add-member-field">
-                    <select class="add-new-member-in-leader-field"
-                            name="leader-new-sitio" id="leader-profile-edit-sitio-dropdown">
-                        {% for sitio in sitios %}
-                            <option value="{{ sitio.id }}">{{ sitio.name }}</option>
-                        {% empty %}
-                            <option value="None">None</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div>
-                    {{ edit_leader_profile_form.age }}
-                </div>
-                <div>
-                    {{ edit_leader_profile_form.gender }}
-                </div>
-                <div>
-                    <button name="edit-leader-profile-btn" type="submit">Save Changes</button>
-                </div>
-            </form>
+                    <div class="leader-profile-edit-form-field-and-label-container">
+                        <div class="leader-profile-edit-form-label-div">
+                            Sitio
+                        </div>
+                        <div class="leader-profile-edit-field-div">
+                            <select class="edit-leader-field"
+                                    name="leader-profile-edit-sitio" id="leader-profile-edit-sitio-dropdown">
+                                {% for sitio in sitios %}
+                                    <option value="{{ sitio.id }}">{{ sitio.name }}</option>
+                                {% empty %}
+                                    <option value="None">None</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="leader-profile-edit-form-field-and-label-container">
+                        <div class="leader-profile-edit-form-label-div">
+                            Age:
+                        </div>
+                        <div class="leader-profile-edit-field-div">
+                            {{ edit_leader_profile_form.age }}
+                        </div>
+                    </div>
+                    <div class="leader-profile-edit-form-field-and-label-container">
+                        <div class="leader-profile-edit-form-label-div">
+                            Gender
+                        </div>
+                        <div class="leader-profile-edit-field-div">
+                            {{ edit_leader_profile_form.gender }}
+                        </div>
+                    </div>
+                    <div class="leader-profile-edit-leader-profile-btn-container-div">
+                        <button class="leader-profile-edit-leader-profile-btn" name="edit-leader-profile-btn" type="submit">Save Changes</button>
+                    </div>
+                </form>
+            </div>
         </div>
         <div style="padding: 1px;"></div>
         <div class="leader-profile-showcase-container-div">
@@ -227,7 +252,7 @@
         var selectedValue = this.value;
         console.log(selectedValue);
         $.ajax({
-            url: '/get_filtered_sitios/',  // Update with your actual URL
+            url: '/get-filtered-sitios-edit-leader-profile/',  // Update with your actual URL
             method: 'GET',
             data: { barangay: selectedValue },
             success: function(data) {
@@ -242,6 +267,19 @@
                 console.error('Error fetching Sitios:', error);
             }
         });
+    });
+
+    const toggleEditLeaderForm = document.querySelector('.leader-profile-edit-detail-toggle-btn');
+    const untoggleEditLeaderForm = document.querySelector('.leader-profile-hide-edit-form-btn');
+
+    const editLeaderProfileForm = document.querySelector('.leader-profile-edit-profile-form-container');
+
+    toggleEditLeaderForm.addEventListener('click', ()=> {
+        editLeaderProfileForm.classList.add('show-leader-edit-form');
+    });
+
+    untoggleEditLeaderForm.addEventListener('click', ()=> {
+        editLeaderProfileForm.classList.remove('show-leader-edit-form');
     });
 </script>
 {% endblock %}
