--- a/management/templates/member_profile.html
+++ b/management/templates/member_profile.html
@@ -3,84 +3,163 @@
 {% load static %}
 
 {% block content %}
-    <div class="member-profile-details-div">
-        <div>
+<section class="member-profile-utmost-container-section">
+    <div class="member-profile-page-title-upper-bar">
+        Member Profile
+    </div>
+    <div style="padding: 1px;"></div>
+    <div class="member-profile-showcase-div">
+        <div class="member-profile-showcase-member-name">
             {{ member.name }}
         </div>
-        <div>
-            {{ member.age }}
+    </div>
+    <div class="member-profile-details-container-div">
+        <div class="member-profile-detail-div" id="member-profile-detail-float-left">
+            <div class="member-profile-detail">
+                <span class="member-profile-detail-icon-span">
+                    <i class="fas fa-dharmachakra" aria-hidden="true"></i>
+                </span>
+                <span class="member-profile-detail-data-span">
+                    {{ member.brgy }}
+                </span>
+            </div>
+            <div class="member-profile-detail">
+                <span class="member-profile-detail-icon-span">
+                    <i class="fas fa-route" aria-hidden="true"></i>
+                </span>
+                <span class="member-profile-detail-data-span">
+                    {{ member.sitio }}
+                </span>
+            </div>
+            <div class="member-profile-detail">
+                <span class="member-profile-detail-icon-span">
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                </span>
+                <span class="member-profile-detail-data-span">
+                    {{ member.date_registered }}
+                </span>
+            </div>
         </div>
-        <div>
-            {{ member.brgy }}
+        <div class="member-profile-detail-div" id="member-profile-detail-float-right">
+            <div class="member-profile-detail">
+                <span class="member-profile-detail-icon-span">
+                    <i class="fas fa-hourglass-half" aria-hidden="true"></i>
+                </span>
+                <span class="member-profile-detail-data-span">
+                    {{ member.age }}
+                </span>
+            </div>
+            <div class="member-profile-detail">
+                <span class="member-profile-detail-icon-span">
+                    <i class="fa fa-neuter" aria-hidden="true"></i>
+                </span>
+                <span class="member-profile-detail-data-span">
+                    {{ member.gender }}
+                </span>
+            </div>
         </div>
-        <div>
-            {{ member.gender }}
+    </div>
+    <div class="member-profile-member-image-container-div">
+        {% if member.image %}
+            <div class="member-profile-profile-img-container">
+                <img class="member-profile-profile-image"
+                     id="product-profile-product-img"
+                     src="{{ member.image.url }} "
+                >
+            </div>
+        {% else %}
+            <div class="member-profile-no-profile-img-container">
+                <i id="member-profile-member-default-img" class="fa fa-user" aria-hidden="true"></i>
+            </div>
+        {% endif %}
+    </div>
+    <div style="box-shadow: inset 0 5px 7px -3px rgba(0, 0, 0, 0.5); padding: 10px; margin-top: 200px;"></div>
+    <div class="member-profile-left-block-container-div">
+        <div class="member-profile-qr-code-container-div">
+            <div class="member-profile-member-qr-code-title-header">
+                {{ member.name }} QR Code
+            </div>
+            <img class="member-profile-qr-code"
+                 src="{% static 'images/qr-codes/' %}QR-Code-{{ member.name }}-{{ member.brgy }}-{{ member.id }}.png">
         </div>
-        <div>
-            {% if member.image %}
-                <div>
-                    <img id="product-profile-product-img" src="{{ member.image.url }} ">
-                </div>
-            {% else %}
-                <div>
-                    <span>No Image</span>
-                </div>
-            {% endif %}
-        </div>
-        <div>
-            <img src="{% static 'images/qr-codes/' %}QR-Code-{{ member.name }}-{{ member.brgy }}-{{ member.id }}.png">
-        </div>
-        <div>
+    </div>
+    <div class="member-profile-right-block-container-div">
+        <div class="member-profile-member-affiliation-block-div">
             {% if not member.name in no_leader_member_list %}
-                {% for leader in leaders %}
-                    <div>
-                        <a href="{% url 'tag-leader' member.name leader.name %}">Assign Member to Leader</a>
-                        <span>{{ leader.name }}</span>
+                <div class="member-profile-affiliation-block-messages-div">
+                    <div class="member-profile-member-not-affiliated-heading-message-div">
+                        Member currently is not affiliated to a Leader
                     </div>
-                {% empty %}
-                    No Leaders in this barangay
-                {% endfor %}
+                </div>
+                <div class="member-profile-brgy-leader-container-div">
+                    <div class="member-profile-leaders-brgy-message-div">
+                        Leaders in Barangay {{ member.brgy }}
+                    </div>
+                    <div class="member-profile-unaffiliated-member-leaders">
+                        {% for leader in leaders %}
+                            <div class="member-profile-unaffiliated-member-leader">
+                                <span>{{ leader</span>
+                                <span>{{ leader.name }}</span>
+                                <a href="{% url 'tag-leader' member.name leader.name %}">
+                                    <i class="fa fa-tag"></i>
+                                </a>
+                            </div>
+                        {% empty %}
+                            <div class="member-profile-no-leaders-notification">
+                                No Leaders in this barangay
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
             {% else %}
-                <span></span>
+                <span>Leader:</span>
+                <span>
+                    {% for possible_leaders in get_member_leader %}
+                        <div>
+                            {{ possible_leaders.leader }}
+                        </div>
+                    {% endfor %}
+                </span>
             {% endif %}
         </div>
     </div>
-        <div id="memberDetailsBlock">
-            <div class="member-details-member-id">
-                <div>
-                    {{ member.name }}<a href="{% url 'promote-member-to-leader' member.name %}">Promote to Leader</a>
-                </div>
-                <div>
-                    {{ member.age }}
-                </div>
-                <div>
-                    {{ member.brgy }}
-                </div>
-                <div>
-                    {{ member.gender }}
-                </div>
-            </div>
-        </div>
-        <div>
-            <button onclick="downloadMemberDetails()">Download Member Details</button>
-        </div>
 
-    <script>
-        function downloadMemberDetails() {
-            var memberDetailsBlock = document.getElementById('memberDetailsBlock');
+<!--    <div id="memberDetailsBlock">-->
+<!--        <div class="member-details-member-id">-->
+<!--            <div>-->
+<!--                {{ member.name }}<a href="{% url 'promote-member-to-leader' member.name %}">Promote to Leader</a>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                {{ member.age }}-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                {{ member.brgy }}-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                {{ member.gender }}-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div>-->
+<!--        <button onclick="downloadMemberDetails()">Download Member Details</button>-->
+<!--    </div>-->
+</section>
+<script>
+    function downloadMemberDetails() {
+        var memberDetailsBlock = document.getElementById('memberDetailsBlock');
 
-            html2canvas(memberDetailsBlock).then(function(canvas) {
-                // Convert the canvas to a data URL and trigger the download
-                var dataUrl = canvas.toDataURL('image/png');
-                var a = document.createElement('a');
-                a.href = dataUrl;
-                a.download = '{{ member.name }}.png';
-                document.body.appendChild(a);
-                a.click();
-                document.body.removeChild(a);
-            });
-        }
-    </script>
+        html2canvas(memberDetailsBlock).then(function(canvas) {
+            // Convert the canvas to a data URL and trigger the download
+            var dataUrl = canvas.toDataURL('image/png');
+            var a = document.createElement('a');
+            a.href = dataUrl;
+            a.download = '{{ member.name }}.png';
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+        });
+    }
+</script>
 <!--        {% for tryer, none in terydac.items %}-->
 <!--            {% for heart in tryer %}-->
 <!--                {% if not member.name in heart.name %}-->
